configuration and possibility to add new user
