# api/resources.py
@@ -1,6 +1,7 @@
-from flask import render_template
+from flask import request, redirect, flash
 from flask_restful import Resource, reqparse
-from models import db, Player, Session, Game
+from models import db, Player, Session, Game, Configuration
+from datetime import datetime
 
 player_parser = reqparse.RequestParser()
 player_parser.add_argument('name', type=str, required=True, help="Name of the player")
@@ -18,12 +19,18 @@ class PlayerResource(Resource):
             return [player.serialize() for player in players], 200
 
     def post(self):
-        args = player_parser.parse_args()
-        print(args)
-        player = Player(name=args['name'])
+        if request.form:
+            player = Player(name=request.form['name'], created_at=datetime.now())
+        else:
+            args = player_parser.parse_args()
+            player = Player(name=args['name'])
+
         db.session.add(player)
         db.session.commit()
-        return {'message': 'Player created', 'id': player.id}, 201
+        if request.form:
+            return redirect('/gamers')
+        else:
+            return {'message': 'Player created', 'id': player.id}, 201
 
 session_parser = reqparse.RequestParser()
 session_parser.add_argument('start_date', type=str, required=True, help="Start date of the session")
@@ -46,13 +53,7 @@ class SessionResource(Resource):
             return {'message': 'Session not found'}, 404
         else:
             sessions = Session.query.all()
-            return [{
-                'id': session.id,
-                'start_date': session.start_date,
-                'end_date': session.end_date,
-                'creator_id': session.creator_id,
-                'players': [player.id for player in session.players]
-            } for session in sessions], 200
+            return [session.serialize() for session in sessions], 200
 
     def post(self):
         args = session_parser.parse_args()
@@ -97,3 +98,39 @@ class GameResource(Resource):
         db.session.add(game)
         db.session.commit()
         return {'message': 'Game created', 'id': game.id}, 201
+
+class ConfigurationResource(Resource):
+    def get(self):
+        config = Configuration.query.first()
+        if config is None:
+            return {"message": "No configuration found"}, 404
+        return config.serialize()
+
+    def post(self):
+        if request.form.get('_method') == 'PUT':
+            return self.put()
+        print('HERE POST')
+        data = request.get_json()
+        config = Configuration(
+            default_dice_count=data['default_dice_count'],
+            max_games_per_session=data['max_games_per_session'],
+            max_sessions=data['max_sessions'],
+            created_at= datetime.now(),
+            updated_at=datetime.now()
+        )
+        db.session.add(config)
+        db.session.commit()
+        return {"message": "Configuration created"}, 201
+
+    def put(self):
+        data = request.form
+
+        config = Configuration.query.first()
+        if config is None:
+            return {"message": "No configuration found"}, 404
+        config.default_dice_count = data['default_dice_count']
+        config.max_games_per_session = data['max_games_per_session']
+        config.max_sessions = data['max_sessions']
+        config.updated_at = datetime.utcnow()
+        db.session.commit()
+        return redirect('/settings')
